<resources>

    <string name="select_eat_way">请选择配送方式</string>
    <string name="input_dishes_price">请输入菜品价格</string>
    <string name="input_dishes_name">请输入菜品名字</string>
    <string name="at_least_dishes">至少一种菜品系</string>
    <string name="at_least_image">至少一张图片描述</string>
    <string name="hunan_cuisine">湘菜</string>
    <string name="northeastern_chinese_cuisine">东北菜</string>
    <string name="sichuan_cuisine">川菜</string>
    <string name="other_cuisine">其他</string>
    <string name="cancel">取消</string>
    <string name="verification_code_error">您输入的验证码有误</string>
    <string name="submit">提交</string>
    <string name="fill_in_personal_contact">选填电话/邮箱/QQ/地址或其他</string>
    <string name="personal_contact">联系方式</string>
    <string name="thanks_comments_feedback">感谢您在此提供的问题和意见。</string>
    <string name="comments_and_feedback">意见及反馈</string>
    <string name="yisjt_cai299">cai299.com  </string>
    <string name="customer_service_telephone">400-6633-299</string>
    <string name="input_by_hand">您还可以手动输入地址哦 *^_^*</string>
    <string name="kitchen_address">厨房地址</string>
    <string name="disher_introduction">简单介绍一下你的菜品吧，让客户更喜欢 *^_^*</string>
    <string name="reasonable_pricing">请合理定价 *^_^*</string>
    <string name="no_more_than_eight">不超过8个字哦 *^_^*</string>
    <string name="confirm_the_editor">确认编辑</string>
    <string name="new_dishes">新增菜品</string>
    <string name="content">内容</string>
    <string name="sure">确定</string>
    <string name="input_phone_number">输入手机号</string>
    <string name="dishes_down">下架</string>
    <string name="dishes_up">上架</string>
    <string name="eat_home">送餐上门</string>
    <string name="eat_here">上门就餐</string>
    <string name="dishes_price">菜品价格</string>
    <string name="eat_go">上门取餐</string>
    <string name="dishes_name">菜品名称</string>
    <string name="at_least_one">（至少一张）</string>
    <string name="dishes_image">图片上传</string>
    <string name="select_fill">（填选）</string>
    <string name="multiple_choices">（可多选）</string>
    <string name="eat_way">就餐方式</string>
    <string name="dishes_explain">菜品介绍</string>
    <string name="dishes_kind">菜品系</string>
    <string name="setting">设置</string>
    <string name="control">管理</string>
    <string name="order_from">订单</string>
    <string name="beingProcessed">处理中</string>
    <string name="processed">已处理</string>
    <string name="untreated">未处理</string>
    <!--<string name="verification_code_error">验证码输入错误 *^_^*</string>-->
    <string name="send_repetition">秒后可重发</string>
    <string name="user_name_empty">用户名不能为空</string>
    <string name="pass_word_empty">密码为空</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="app_explain">点击动态登录并注册即表示您已同意《用户服务协议》。</string>
    <string name="dynamic_login_register">动态登录并注册</string>
    <string name="app_name">我的菜</string>
    <string name="Version_number_is_wrong">版本号错误</string>
</resources>
