<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f1f1f1"
    android:orientation="vertical">

    <include layout="@layout/title_first_bar" />


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="15dp"
        android:background="@color/color_ffffff">

        <EditText
            android:id="@+id/et_feedback"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:background="@null"
            android:ellipsize="end"
            android:gravity="start"
            android:hint="@string/thanks_comments_feedback"
            android:padding="4dp"
            android:textColorHint="@color/color_BBBBBB"
            android:textSize="14sp" />
    </android.support.v7.widget.CardView>


    <LinearLayout
        android:id="@+id/ll_user_name_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/white_bg"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:singleLine="true"
            android:text="@string/personal_contact"
            android:textColor="@color/color_3B3E3D"
            android:textSize="14sp" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@color/color_f1f1f1" />

        <EditText
            android:id="@+id/et_contact"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:layout_weight="1"
            android:background="@null"
            android:drawablePadding="5dp"
            android:gravity="center_vertical|left"
            android:hint="@string/fill_in_personal_contact"
            android:paddingLeft="5dp"
            android:paddingRight="2dp"
            android:singleLine="true"
            android:textColor="@color/color_9A9A9A"
            android:textSize="14sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/selecter_input_phone"
        android:text="@string/submit"
        android:textColor="@color/color_ffffff"
        android:textSize="22sp" />


</LinearLayout>
