<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_hide_input"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/nav_bg"
        android:gravity="center"
        android:text="@string/dynamic_login_register"
        android:textColor="@color/color_ffffff"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tv_title"
        android:orientation="vertical">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_logo_myfood" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/input_phone"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/et_user_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:ems="10"
                android:hint="@string/input_phone_number"
                android:inputType="textPersonName"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textColor="@color/color_cdffffff"
                android:textColorHint="@color/color_cdffffff" />

            <TextView
                android:id="@+id/tv_get_code"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@drawable/input_yan"
                android:gravity="center"
                android:text="@string/get_verification_code"
                android:textColor="@color/color_3B3E3D"
                android:textSize="14sp" />

        </LinearLayout>


        <EditText
            android:id="@+id/et_user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/input_phone"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="密码或验证码"
            android:inputType="textPassword"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textColor="@color/color_cdffffff"
            android:textColorHint="@color/color_cdffffff" />


        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="33dp"
            android:background="@drawable/selecter_input_phone"
            android:text="@string/dynamic_login_register"
            android:textColor="@color/color_ffffff"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tv_app_explain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/app_explain"
            android:textColor="@color/color_c6c8c8"
            android:textSize="12sp" />
    </LinearLayout>

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_below="@id/tv_title">-->

    <!--<TextView-->
    <!--android:id="@+id/tv_code_error"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="25dp"-->
    <!--android:background="@color/color_f1f1f1"-->
    <!--android:gravity="center"-->
    <!--android:text="@string/verification_code_error"-->
    <!--android:textColor="@color/color_fe761b"-->
    <!--android:textSize="12sp" />-->
    <!--</LinearLayout>-->


</RelativeLayout>